# LabsProgLang

lab4/: All.vpp  EditDialog.cpp  EditDialog.h  EditDialog.ui  Figure.cpp  Figure.h  Slider.cpp  Slider.h  lab4.cpp  lab4.h  lab4.qrc  lab4.ui  lab4.vcxproj  lab4.vcxproj.filters  main.cpp
lab4/x64/Debug/: lab4.exe.recipe
lab4/x64/Debug/lab4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab4.lastbuildstate  lab4.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
lab4/x64/Debug/moc/: moc_Figure.cpp  moc_Slider.cpp  moc_lab4.cpp
lab4/x64/Debug/qmake/: qtvars_x64_Debug.props
lab4/x64/Debug/rcc/: qrc_lab4.cpp
lab4/x64/Debug/uic/: ui_EditDialog.h
lab4/x64/Release/: lab4.exe.recipe
lab4/x64/Release/lab4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab4.lastbuildstate  lab4.write.1u.tlog  link.read.1.tlog  (+8 more)
lab5/: CodeEditor.cpp  CodeEditor.h  Example.txt  Example2.txt  MainWindow  Notepad.vcxproj  Notepad.vcxproj.filters  highlighter.cpp  highlighter.h  highlighter.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.ini  style1.style  style2.style  style3.style  style4.style
lab5/x64/Debug/: Notepad.exe.recipe
lab5/x64/Release/: Notepad.exe.recipe
laboratory-work-01-PavelZilbershteyn/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  DateAndTime.cpp  DateAndTime.h  YearFromAdam.cpp  YearFromAdam.h  main0.cpp  main1.cpp  main2.cpp
laboratory-work-01-PavelZilbershteyn/DirForPR2/: BigNumber.cpp  Matrix.cpp  Matrix.h  YearFromAdam.cpp  main2.cpp
laboratory-work-01-PavelZilbershteyn/NewDir/: BigNumber.cpp  BigNumber.h  Matrix.cpp  Matrix.h  YearFromAdam.cpp  YearFromAdam.h  main2.cpp  main3.cpp
laboratory-work-02-PavelZilbershteyn/: ADT.h  BigNumber.cpp  CMakeLists.txt  DateAndTime.cpp  List.cpp  List.h  Matrix.cpp  Queue.cpp  Queue.h  Stack.cpp  Stack.h  Test.cpp  Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Tree.cpp  Tree.h  Vector.cpp  Vector.h
laboratory-work-03-PavelZilbershteyn/: BigNumber.h  CMakeLists.txt  DateAndTime.h  List.hpp  Matrix.h  Queue.hpp  Stack.h  Test.cpp  Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Tree.hpp  Vector.h  YearFromAdam.cpp  YearFromAdam.h  report.html  report1.html  report2.html  report3.html  report4.html
(+40 files in other folders)
